--- a/index.html
+++ b/index.html
@@ -3,115 +3,59 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Grup Sağanak Setlist ⚡</title>
+  <title>Şarkı Düzenleyici - Contenteditable</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
-      background-color: #f4f4f4;
+      background-color: #f9f9f9;
     }
-    select, input[type=text], button {
+    #songHtmlContainer {
+      border: 1px solid #ccc;
+      min-height: 300px;
       padding: 10px;
+      background-color: #fff;
+      margin-top: 20px;
+      overflow-y: auto;
+      white-space: pre-wrap;
+      font-size: 18px;
+      outline: none; /* focus efekti için */
+    }
+    select, input, button {
       font-size: 16px;
-      border-radius: 5px;
-      border: 1px solid #ddd;
-      margin-bottom: 10px;
+      margin: 5px 0;
+      padding: 8px;
       width: 100%;
-      box-sizing: border-box;
+      max-width: 400px;
     }
     button {
+      cursor: pointer;
       background-color: #28a745;
       color: white;
       border: none;
-      cursor: pointer;
+      border-radius: 4px;
     }
-    button:hover {
-      background-color: #218838;
-    }
-    #songHtmlContainer {
-      margin-top: 20px;
-      padding: 10px;
-      background-color: white;
-      border: 1px solid #ccc;
-      min-height: 200px;
-      white-space: pre-wrap;
-      font-family: monospace;
-    }
-    h1, h3 {
-      color: #333;
-    }
-    textarea {
-      width: 100%;
-      height: 150px;
-      margin-bottom: 10px;
-      font-family: monospace;
-      font-size: 16px;
-      padding: 10px;
-      box-sizing: border-box;
-      border-radius: 5px;
-      border: 1px solid #ddd;
-      resize: vertical;
-    }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 15px;
-    }
-    hr {
-      margin: 30px 0;
-      border: 1px solid #ddd;
+    button:disabled {
+      background-color: #999;
+      cursor: not-allowed;
     }
   </style>
-
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 </head>
 <body>
+  <h1>Şarkı Seç / Düzenle / Kaydet</h1>
 
-  <h1>Grup Sağanak Setlist ⚡</h1>
-
-  <!-- Kategori seçimi -->
-  <label for="categoryDropdown">Kategori Seçin veya Tümünü Göster</label>
-  <select id="categoryDropdown">
-    <option value="">Tüm Kategoriler</option>
-  </select>
-
-  <!-- Şarkı seçimi -->
-  <label for="songsDropdown">Şarkı Seçin</label>
   <select id="songsDropdown">
-    <option value="" disabled selected>Bir şarkı seçin</option>
+    <option value="" disabled selected>Şarkı seçiniz</option>
   </select>
 
-  <!-- Şarkı HTML içeriği ve düzenleme -->
-  <label for="songHtmlContainer">Şarkı Akorları ve Sözleri (HTML formatında)</label>
-  <textarea id="songHtmlContainer" spellcheck="false"></textarea>
+  <div id="songHtmlContainer" contenteditable="true" spellcheck="false"></div>
 
-  <!-- Ton değiştirme butonları -->
-  <button id="transposeUpButton">1 Ton Yukarı</button>
-  <button id="transposeDownButton">1 Ton Aşağı</button>
-  <button id="saveButton">Kaydet / Güncelle</button>
-
-  <hr />
-
-  <!-- Yeni şarkı ekleme -->
-  <h3>Yeni Şarkı Ekle</h3>
-  <label for="newSongName">Şarkı Adı</label>
-  <input type="text" id="newSongName" placeholder="Şarkı adını girin" />
-  <label for="newSongCategory">Kategori</label>
-  <input type="text" id="newSongCategory" placeholder="Kategori girin (örn: Rock, Pop)" />
-  <label for="newSongHtml">Akorlar ve Sözler (HTML formatında)</label>
-  <textarea id="newSongHtml" placeholder="Şarkı akorlarını ve sözlerini buraya girin"></textarea>
-  <button id="addSongButton">Yeni Şarkı Ekle</button>
-
-  <hr />
-
-  <!-- Yeni kategori ekleme -->
-  <h3>Yeni Kategori Ekle</h3>
-  <input type="text" id="newCategoryInput" placeholder="Yeni kategori adı girin" />
-  <button id="addCategoryButton">Kategori Ekle</button>
+  <button id="saveButton" disabled>Kaydet</button>
 
   <script>
-    // Firebase yapılandırma (sana ait)
+    // Firebase config (senin bilgilerinle değiştir)
     const firebaseConfig = {
       apiKey: "AIzaSyDAhFPe_j750iRzfv96xHAMX488sj6xBTs",
       authDomain: "saganak-24ec8.firebaseapp.com",
@@ -123,195 +67,53 @@
       measurementId: "G-S1C78RYR9Z"
     };
 
-    const app = firebase.initializeApp(firebaseConfig);
+    firebase.initializeApp(firebaseConfig);
     const database = firebase.database();
 
     const songsRef = database.ref('Songs');
-    const categoriesRef = database.ref('Categories');
-
-    const categoryDropdown = document.getElementById('categoryDropdown');
-    const songsDropdown = document.getElementById('songsDropdown');
+    const dropdown = document.getElementById('songsDropdown');
     const songHtmlContainer = document.getElementById('songHtmlContainer');
-    const newCategoryInput = document.getElementById('newCategoryInput');
-    const newSongName = document.getElementById('newSongName');
-    const newSongCategory = document.getElementById('newSongCategory');
-    const newSongHtml = document.getElementById('newSongHtml');
-
-    const chords = ['A', 'A#', 'B', 'C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#'];
+    const saveButton = document.getElementById('saveButton');
 
     let currentSongId = null;
-    let currentSongHtml = "";
 
-    // Kategori dropdown doldurma
-    function fillCategoriesDropdown() {
-      categoriesRef.once('value', snapshot => {
-        const categories = snapshot.val() || {};
-        categoryDropdown.innerHTML = '<option value="">Tüm Kategoriler</option>';
-        Object.values(categories).sort().forEach(cat => {
-          const option = document.createElement('option');
-          option.value = cat;
-          option.textContent = cat;
-          categoryDropdown.appendChild(option);
-        });
+    // Şarkıları dropdown'a yükle
+    function loadSongs() {
+      songsRef.once('value').then(snapshot => {
+        dropdown.innerHTML = '<option value="" disabled selected>Şarkı seçiniz</option>';
+        const songs = snapshot.val();
+        for (const id in songs) {
+          const opt = document.createElement('option');
+          opt.value = id;
+          opt.textContent = songs[id].Name;
+          dropdown.appendChild(opt);
+        }
       });
     }
 
-    // Şarkıları kategoriye göre yükle
-    function fillSongsDropdown(selectedCategory = "") {
-      songsRef.once('value', snapshot => {
-        const songs = snapshot.val() || {};
-        songsDropdown.innerHTML = '<option value="" disabled selected>Bir şarkı seçin</option>';
-
-        Object.entries(songs).forEach(([id, song]) => {
-          if (!selectedCategory || song.Category === selectedCategory) {
-            const option = document.createElement('option');
-            option.value = id;
-            option.textContent = song.Name;
-            songsDropdown.appendChild(option);
-          }
-        });
-      });
-    }
-
-    // Akor transpoze fonksiyonları
-    function transposeChord(chord, steps) {
-      const index = chords.indexOf(chord);
-      if (index === -1) return chord;
-      let newIndex = (index + steps) % chords.length;
-      if (newIndex < 0) newIndex += chords.length;
-      return chords[newIndex];
-    }
-
-    function transposeSong(html, steps) {
-      // Akorları bulmak için basit regex
-      const chordRegex = new RegExp(`\\b(${chords.join('|')})\\b`, 'g');
-      return html.replace(chordRegex, chord => transposeChord(chord, steps));
-    }
-
-    // Şarkı seçildiğinde içeriği göster
-    songsDropdown.addEventListener('change', () => {
-      currentSongId = songsDropdown.value;
-      if (!currentSongId) {
-        songHtmlContainer.value = "";
-        return;
-      }
-      songsRef.child(currentSongId).once('value', snapshot => {
+    // Şarkı seçilince içeriği yükle
+    dropdown.addEventListener('change', () => {
+      currentSongId = dropdown.value;
+      if (!currentSongId) return;
+      songsRef.child(currentSongId).once('value').then(snapshot => {
         const song = snapshot.val();
-        currentSongHtml = song.Html || "";
-        songHtmlContainer.value = currentSongHtml;
-        // Seçilen şarkının kategorisini kategori dropdown'a yansıt
-        if (song.Category) {
-          categoryDropdown.value = song.Category;
-        }
+        songHtmlContainer.innerHTML = song.Html || '';
+        saveButton.disabled = false;
       });
     });
 
-    // Kategori seçildiğinde ilgili şarkıları filtrele
-    categoryDropdown.addEventListener('change', () => {
-      fillSongsDropdown(categoryDropdown.value);
-      // Şarkı seçimini temizle
-      songsDropdown.value = "";
-      songHtmlContainer.value = "";
-      currentSongId = null;
+    // Kaydetme fonksiyonu
+    saveButton.addEventListener('click', () => {
+      if (!currentSongId) return alert('Önce bir şarkı seçin');
+      const updatedHtml = songHtmlContainer.innerHTML;
+      songsRef.child(currentSongId).update({ Html: updatedHtml })
+        .then(() => alert('Şarkı kaydedildi!'))
+        .catch(err => alert('Kaydederken hata: ' + err.message));
     });
 
-    // Ton yukarı
-    document.getElementById('transposeUpButton').addEventListener('click', () => {
-      if (!currentSongId) {
-        alert('Lütfen önce bir şarkı seçin.');
-        return;
-      }
-      currentSongHtml = transposeSong(songHtmlContainer.value, 1);
-      songHtmlContainer.value = currentSongHtml;
-    });
-
-    // Ton aşağı
-    document.getElementById('transposeDownButton').addEventListener('click', () => {
-      if (!currentSongId) {
-        alert('Lütfen önce bir şarkı seçin.');
-        return;
-      }
-      currentSongHtml = transposeSong(songHtmlContainer.value, -1);
-      songHtmlContainer.value = currentSongHtml;
-    });
-
-    // Şarkı kaydet / güncelle
-    document.getElementById('saveButton').addEventListener('click', () => {
-      if (!currentSongId) {
-        alert('Lütfen önce bir şarkı seçin.');
-        return;
-      }
-      const updatedHtml = songHtmlContainer.value.trim();
-      if (!updatedHtml) {
-        alert('Şarkı içeriği boş olamaz.');
-        return;
-      }
-      const updatedCategory = categoryDropdown.value || "";
-      songsRef.child(currentSongId).update({
-        Html: updatedHtml,
-        Category: updatedCategory
-      }, error => {
-        if (error) alert('Kaydetme hatası: ' + error);
-        else alert('Şarkı başarıyla güncellendi!');
-      });
-    });
-
-    // Yeni kategori ekle
-    document.getElementById('addCategoryButton').addEventListener('click', () => {
-      const newCategory = newCategoryInput.value.trim();
-      if (!newCategory) {
-        alert('Lütfen kategori adı girin.');
-        return;
-      }
-      // Aynı kategorinin eklenmesini önlemek için önce kontrol yap
-      categoriesRef.once('value', snap => {
-        const categories = snap.val() || {};
-        if (Object.values(categories).includes(newCategory)) {
-          alert('Bu kategori zaten var.');
-          return;
-        }
-        categoriesRef.push(newCategory, error => {
-          if (error) alert('Kategori eklenirken hata oluştu: ' + error);
-          else {
-            alert(`"${newCategory}" kategorisi eklendi.`);
-            newCategoryInput.value = "";
-            fillCategoriesDropdown();
-          }
-        });
-      });
-    });
-
-    // Yeni şarkı ekle
-    document.getElementById('addSongButton').addEventListener('click', () => {
-      const name = newSongName.value.trim();
-      const category = newSongCategory.value.trim();
-      const html = newSongHtml.value.trim();
-      if (!name || !html) {
-        alert('Lütfen şarkı adı ve içeriği girin.');
-        return;
-      }
-      // Yeni şarkıyı Firebase'e ekle
-      songsRef.push({
-        Name: name,
-        Category: category,
-        Html: html
-      }, error => {
-        if (error) alert('Şarkı eklenirken hata oluştu: ' + error);
-        else {
-          alert(`"${name}" şarkısı başarıyla eklendi.`);
-          newSongName.value = "";
-          newSongCategory.value = "";
-          newSongHtml.value = "";
-          fillSongsDropdown(categoryDropdown.value);
-        }
-      });
-    });
-
-    // İlk yüklemede kategorileri ve şarkıları getir
-    fillCategoriesDropdown();
-    fillSongsDropdown();
+    // Başlangıçta şarkıları yükle
+    loadSongs();
 
   </script>
-
 </body>
 </html>
