--- a/index.html
+++ b/index.html
@@ -1,148 +1,158 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Şarkı Yönetim Paneli</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 15px;
-    background-color: #f9f9f9;
-  }
-  select, input, textarea, button {
-    font-size: 16px;
-    padding: 8px;
-    margin: 5px 0 10px 0;
-    width: 100%;
-    box-sizing: border-box;
-  }
-  button {
-    cursor: pointer;
-    border: none;
-    background-color: #28a745;
-    color: white;
-    border-radius: 4px;
-  }
-  button:hover {
-    background-color: #218838;
-  }
-  #songHtmlContainer {
-    border: 1px solid #ccc;
-    background: white;
-    padding: 10px;
-    min-height: 200px;
-    margin-bottom: 20px;
-    overflow-y: auto;
-  }
-  h2.song-title {
-    font-weight: bold;
-    margin-bottom: 15px;
-  }
-  .flex-row {
-    display: flex;
-    gap: 10px;
-    flex-wrap: wrap;
-  }
-  .flex-row > * {
-    flex: 1;
-    min-width: 150px;
-  }
-  label {
-    font-weight: bold;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Grup Sağanak Setlist ⚡</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f4f4f4;
+    }
+    h1 {
+      color: #333;
+    }
+    select, input[type="text"], textarea {
+      width: 100%;
+      padding: 8px;
+      margin: 6px 0 12px;
+      font-size: 16px;
+      border-radius: 4px;
+      border: 1px solid #ddd;
+      box-sizing: border-box;
+    }
+    button {
+      padding: 10px 16px;
+      margin: 6px 6px 12px 0;
+      background-color: #28a745;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #218838;
+    }
+    #songHtmlContainer {
+      margin-top: 20px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      background-color: #fff;
+      min-height: 150px;
+      white-space: pre-wrap;
+      overflow-wrap: break-word;
+    }
+    h2.song-title {
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .section {
+      background: white;
+      padding: 15px;
+      margin-bottom: 25px;
+      border-radius: 6px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    }
+    label {
+      font-weight: bold;
+    }
+  </style>
 
-<!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 </head>
 <body>
+  <h1>Grup Sağanak Setlist ⚡</h1>
 
-<h1>Şarkı Yönetim Paneli</h1>
+  <div class="section">
+    <label for="categoryFilter">Kategori Filtrele:</label>
+    <select id="categoryFilter">
+      <option value="">Tüm Kategoriler</option>
+    </select>
 
-<!-- Kategori Seçme -->
-<label for="categorySelect">Kategori Seç:</label>
-<select id="categorySelect">
-  <option value="">-- Tüm Kategoriler --</option>
-</select>
+    <label for="songsDropdown">Şarkı Seç:</label>
+    <select id="songsDropdown">
+      <option value="" disabled selected>Bir şarkı seçin</option>
+    </select>
 
-<!-- Şarkı Seçme -->
-<label for="songsDropdown">Şarkı Seç:</label>
-<select id="songsDropdown">
-  <option value="" disabled selected>Bir şarkı seçin</option>
-</select>
+    <button id="transposeUpButton">1 Ton Yukarı</button>
+    <button id="transposeDownButton">1 Ton Aşağı</button>
+    <button id="saveButton">Şarkı Düzenlemeyi Kaydet</button>
 
-<!-- Şarkı İçeriği Editable Alan -->
-<div id="songHtmlContainer" contenteditable="true" spellcheck="false"></div>
+    <div id="songHtmlContainer" contenteditable="true"></div>
+  </div>
 
-<!-- Ton Transpoze Butonları -->
-<div class="flex-row" style="max-width: 300px;">
-  <button id="transposeUpButton" type="button">1 Ton Yukarı</button>
-  <button id="transposeDownButton" type="button">1 Ton Aşağı</button>
-  <button id="saveEditButton" type="button" style="background-color:#007bff;">Düzenlemeyi Kaydet</button>
-</div>
+  <div class="section">
+    <h3>Yeni Şarkı Ekle</h3>
+    <label for="newSongName">Şarkı Adı:</label>
+    <input type="text" id="newSongName" placeholder="Şarkı adı girin" />
 
-<hr>
+    <label for="newSongCategory">Kategori Seç:</label>
+    <select id="newSongCategory">
+      <option value="" disabled selected>Kategori seçin</option>
+    </select>
 
-<!-- Yeni Şarkı Ekleme Formu -->
-<h2>Yeni Şarkı Ekle</h2>
-<label for="newSongName">Şarkı Adı:</label>
-<input type="text" id="newSongName" placeholder="Şarkı adı girin" />
+    <label for="newSongHtml">Akorlar ve Şarkı Sözleri (HTML formatında):</label>
+    <textarea id="newSongHtml" rows="8" placeholder="Şarkı akorları ve sözleri HTML olarak"></textarea>
 
-<label for="newSongCategory">Kategori Seç:</label>
-<select id="newSongCategory">
-  <option value="" disabled selected>Kategori seçin</option>
-</select>
+    <button id="addSongButton">Yeni Şarkıyı Ekle</button>
+  </div>
 
-<label for="newSongHtml">Şarkı HTML İçeriği:</label>
-<textarea id="newSongHtml" rows="6" placeholder="Şarkı akor ve sözlerini HTML olarak girin"></textarea>
-
-<button id="addSongButton" type="button">Yeni Şarkıyı Ekle</button>
-
-<hr>
-
-<!-- Yeni Kategori Ekleme Formu -->
-<h2>Yeni Kategori Ekle</h2>
-<input type="text" id="newCategoryName" placeholder="Kategori adı girin" />
-<button id="addCategoryButton" type="button" style="background-color:#6c757d;">Kategori Ekle</button>
+  <div class="section">
+    <h3>Yeni Kategori Ekle</h3>
+    <input type="text" id="newCategoryInput" placeholder="Kategori adı girin" />
+    <button id="addCategoryButton">Kategori Ekle</button>
+  </div>
 
 <script>
-  // Firebase yapılandırma (sana ait bilgileri buraya koy)
+  // Firebase ayarları
   const firebaseConfig = {
     apiKey: "AIzaSyDAhFPe_j750iRzfv96xHAMX488sj6xBTs",
     authDomain: "saganak-24ec8.firebaseapp.com",
     databaseURL: "https://saganak-24ec8-default-rtdb.europe-west1.firebasedatabase.app",
     projectId: "saganak-24ec8",
-    storageBucket: "saganak-24ec8.appspot.com",
+    storageBucket: "saganak-24ec8.firebasestorage.app",
     messagingSenderId: "394236997954",
     appId: "1:394236997954:web:c49ebc99d98722e31b98db",
     measurementId: "G-S1C78RYR9Z"
   };
 
-  firebase.initializeApp(firebaseConfig);
+  // Firebase başlat
+  const app = firebase.initializeApp(firebaseConfig);
   const database = firebase.database();
 
-  // Referanslar
-  const songsRef = database.ref('Songs');
+  // Firebase referanslar
   const categoriesRef = database.ref('Categories');
+  const songsRef = database.ref('Songs');
+  const currentSelectedSongRef = database.ref('CurrentSelectedSong');
 
-  // DOM elementleri
-  const categorySelect = document.getElementById('categorySelect');
+  // HTML elementler
+  const categoryFilter = document.getElementById('categoryFilter');
   const newSongCategory = document.getElementById('newSongCategory');
   const songsDropdown = document.getElementById('songsDropdown');
   const songHtmlContainer = document.getElementById('songHtmlContainer');
+  const saveButton = document.getElementById('saveButton');
+  const transposeUpButton = document.getElementById('transposeUpButton');
+  const transposeDownButton = document.getElementById('transposeDownButton');
   const newSongName = document.getElementById('newSongName');
   const newSongHtml = document.getElementById('newSongHtml');
-  const newCategoryName = document.getElementById('newCategoryName');
+  const addSongButton = document.getElementById('addSongButton');
+  const newCategoryInput = document.getElementById('newCategoryInput');
+  const addCategoryButton = document.getElementById('addCategoryButton');
 
   let currentSongId = null;
   let currentSongData = null;
 
-  // Akorlar (transpoze için)
+  // Akor listesi
   const chords = ['A', 'A#', 'B', 'C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#'];
 
-  // Transpoze fonksiyonları
+  // Şarkıları ve kategorileri tutacak nesneler
+  let allSongs = {};
+  let allCategories = {};
+
+  // Akoru transpoze eden fonksiyon
   function transposeChord(chord, steps) {
     const index = chords.indexOf(chord);
     if (index === -1) return chord;
@@ -151,176 +161,176 @@
     return chords[newIndex];
   }
 
-  // Akorları span#nota içinde transpoze et
-  function transposeSongHtml(html, steps) {
-    const parser = new DOMParser();
-    const doc = parser.parseFromString(html, 'text/html');
-    const spans = doc.querySelectorAll('span#nota');
+  // Şarkı içeriğinde tüm akorları transpoze eden fonksiyon
+  function transposeSong(songHtml, steps) {
+    // Regex: sadece akorların tamamını büyük/küçük harf eşleşmesine duyarlı olarak yakalayalım
+    // Burada basit örnek sadece büyük harfli akorlar için, geliştirebilirsin
+    const chordPattern = /\b(A#|Bb|B|C#|Db|D#|Eb|E|F#|Gb|G#|Ab|A|B|C|D|E|F|G|Am|Bm|Cm|Dm|Em|Fm|Gm|A7|B7|C7|D7|E7|F7|G7|m7|maj7|sus4|sus2|add9|dim|aug|m)?\b/g;
+    // Fakat burada kodu basitleştirmek için sadece temel 12 akor üzerinden çalışıyoruz:
+    // Not: Burada sadece temel 12 akor üzerinden değişim yapılıyor, detaylı varyasyonlar eklenebilir.
 
-    spans.forEach(span => {
-      let chordText = span.textContent.trim();
-      const match = chordText.match(/^([A-G]#?)(.*)$/);
-      if (match) {
-        const root = match[1];
-        const suffix = match[2];
-        const transposedRoot = transposeChord(root, steps);
-        span.textContent = transposedRoot + suffix;
-      }
+    return songHtml.replace(/\b([A-G]#?m?7?|[A-G]m?)\b/g, match => {
+      return transposeChord(match, steps);
     });
-
-    return doc.body.innerHTML;
   }
 
-  // Kategorileri yükle
+  // Kategorileri yükle ve dropdownları doldur
   function loadCategories() {
-    categoriesRef.once('value', snapshot => {
-      const cats = snapshot.val() || {};
-      categorySelect.innerHTML = '<option value="">-- Tüm Kategoriler --</option>';
-      newSongCategory.innerHTML = '<option value="" disabled selected>Kategori seçin</option>';
-      for (const key in cats) {
-        const cat = cats[key];
-        const opt1 = document.createElement('option');
-        opt1.value = cat.name;
-        opt1.textContent = cat.name;
-        categorySelect.appendChild(opt1);
+    categoriesRef.on('value', snapshot => {
+      const data = snapshot.val() || {};
+      allCategories = data;
 
-        const opt2 = document.createElement('option');
-        opt2.value = cat.name;
-        opt2.textContent = cat.name;
-        newSongCategory.appendChild(opt2);
+      // Filtre dropdown doldur
+      categoryFilter.innerHTML = '<option value="">Tüm Kategoriler</option>';
+      newSongCategory.innerHTML = '<option value="" disabled selected>Kategori seçin</option>';
+
+      for (const key in data) {
+        const catName = data[key];
+        categoryFilter.innerHTML += `<option value="${catName}">${catName}</option>`;
+        newSongCategory.innerHTML += `<option value="${catName}">${catName}</option>`;
       }
-      loadSongs(categorySelect.value);
     });
   }
 
-  // Şarkıları yükle, kategoriye göre filtrele
-  function loadSongs(selectedCategory = '') {
-    songsDropdown.innerHTML = '<option value="" disabled selected>Bir şarkı seçin</option>';
-    songsRef.once('value', snapshot => {
-      const songs = snapshot.val() || {};
-      for (const key in songs) {
-        const song = songs[key];
-        if (!selectedCategory || song.Category === selectedCategory) {
-          const option = document.createElement('option');
-          option.value = key;
-          option.textContent = song.Name;
-          songsDropdown.appendChild(option);
+  // Şarkıları yükle, kategori filtresine göre filtrele ve dropdowna ekle
+  function loadSongs(filterCategory = '') {
+    songsRef.on('value', snapshot => {
+      const data = snapshot.val() || {};
+      allSongs = data;
+
+      // Dropdown temizle
+      songsDropdown.innerHTML = '<option value="" disabled selected>Bir şarkı seçin</option>';
+
+      for (const songId in data) {
+        const song = data[songId];
+        // Kategori filtre varsa uygunsa göster, yoksa tümünü göster
+        if (!filterCategory || (song.Category && song.Category === filterCategory)) {
+          songsDropdown.innerHTML += `<option value="${songId}">${song.Name}</option>`;
         }
       }
     });
   }
 
-  // Şarkı seçilince göster
+  // Şarkı seçildiğinde veriyi göster ve içerik editöre yaz
   songsDropdown.addEventListener('change', e => {
     const songId = e.target.value;
     if (!songId) return;
-    songsRef.child(songId).once('value', snapshot => {
-      const song = snapshot.val();
-      if (!song) return;
-      currentSongId = songId;
-      currentSongData = song;
-      const titleHtml = `<h2 class="song-title">${song.Name}</h2>`;
-      songHtmlContainer.innerHTML = titleHtml + song.Html;
-    });
+    currentSelectedSongRef.set(songId); // Gerçek zamanlı seçimi güncelle
   });
 
-  // Kategori seçince şarkıları filtrele
-  categorySelect.addEventListener('change', e => {
-    loadSongs(e.target.value);
-    // Seçim değişince şarkı içeriğini temizle
-    currentSongId = null;
-    currentSongData = null;
-    songsDropdown.value = "";
-    songHtmlContainer.innerHTML = "";
-  });
+  // Firebase üzerinden gerçek zamanlı şarkı seçimi dinleme
+  currentSelectedSongRef.on('value', snapshot => {
+    const songId = snapshot.val();
+    if (!songId) return;
 
-  // Ton yukarı transpoze
-  document.getElementById('transposeUpButton').addEventListener('click', () => {
-    if (!currentSongId) { alert("Önce bir şarkı seçin."); return; }
-    const newHtml = transposeSongHtml(songHtmlContainer.innerHTML, +1);
-    songHtmlContainer.innerHTML = newHtml;
-  });
+    if (songsDropdown.value !== songId) {
+      songsDropdown.value = songId;
 
-  // Ton aşağı transpoze
-  document.getElementById('transposeDownButton').addEventListener('click', () => {
-    if (!currentSongId) { alert("Önce bir şarkı seçin."); return; }
-    const newHtml = transposeSongHtml(songHtmlContainer.innerHTML, -1);
-    songHtmlContainer.innerHTML = newHtml;
-  });
-
-  // Düzenlenen şarkıyı kaydet
-  document.getElementById('saveEditButton').addEventListener('click', () => {
-    if (!currentSongId) { alert("Önce bir şarkı seçin."); return; }
-    let htmlContent = songHtmlContainer.innerHTML;
-
-    // Başlığı ve içeriği ayır (başlık dışarıda kalmalı)
-    // Başlık <h2 class="song-title">...</h2> olarak eklenmiş, onu çıkarıyoruz kaydederken:
-    const tempDiv = document.createElement('div');
-    tempDiv.innerHTML = htmlContent;
-    const h2 = tempDiv.querySelector('h2.song-title');
-    if (h2) h2.remove();
-    const cleanedHtml = tempDiv.innerHTML.trim();
-
-    // Güncelle Firebase'de
-    songsRef.child(currentSongId).update({
-      Html: cleanedHtml
-    }).then(() => {
-      alert("Şarkı içeriği başarıyla kaydedildi.");
-      currentSongData.Html = cleanedHtml;
-    }).catch(err => alert("Kaydetme hatası: " + err.message));
-  });
-
-  // Yeni kategori ekle
-  document.getElementById('addCategoryButton').addEventListener('click', () => {
-    const name = newCategoryName.value.trim();
-    if (!name) {
-      alert("Kategori adı boş olamaz!");
-      return;
+      songsRef.child(songId).once('value').then(songSnap => {
+        const song = songSnap.val();
+        if (!song) return;
+        currentSongId = songId;
+        currentSongData = song;
+        const titleHtml = `<h2 class="song-title">${song.Name}</h2>`;
+        songHtmlContainer.innerHTML = titleHtml + song.Html;
+      });
     }
-
-    // Aynı isimden varsa uyar
-    categoriesRef.orderByChild('name').equalTo(name).once('value', snapshot => {
-      if (snapshot.exists()) {
-        alert("Bu isimde bir kategori zaten var.");
-      } else {
-        const newKey = categoriesRef.push().key;
-        categoriesRef.child(newKey).set({ name }).then(() => {
-          alert("Kategori eklendi.");
-          newCategoryName.value = "";
-          loadCategories();
-        }).catch(err => alert("Kategori ekleme hatası: " + err.message));
-      }
-    });
   });
 
-  // Yeni şarkı ekle
-  document.getElementById('addSongButton').addEventListener('click', () => {
+  // Kategori filtreleme değişince şarkıları filtrele
+  categoryFilter.addEventListener('change', e => {
+    loadSongs(e.target.value);
+  });
+
+  // Yeni şarkı ekleme işlemi
+  addSongButton.addEventListener('click', () => {
     const name = newSongName.value.trim();
     const category = newSongCategory.value;
     const html = newSongHtml.value.trim();
 
     if (!name || !category || !html) {
-      alert("Lütfen şarkı adı, kategori ve içerik girin.");
+      alert("Lütfen tüm alanları doldurun!");
       return;
     }
 
-    // Yeni şarkıyı Firebase'e ekle
-    const newKey = songsRef.push().key;
-    songsRef.child(newKey).set({
+    const newSongKey = songsRef.push().key;
+    songsRef.child(newSongKey).set({
       Name: name,
       Category: category,
-      Html: html
+      Html: `<h2 class="song-title">${name}</h2>\n${html}`
     }).then(() => {
-      alert("Yeni şarkı eklendi.");
-      newSongName.value = "";
-      newSongHtml.value = "";
-      newSongCategory.value = "";
-      loadSongs(categorySelect.value);
-    }).catch(err => alert("Şarkı ekleme hatası: " + err.message));
+      alert("Yeni şarkı eklendi!");
+      newSongName.value = '';
+      newSongCategory.value = '';
+      newSongHtml.value = '';
+    }).catch(e => {
+      alert("Hata oluştu: " + e.message);
+    });
   });
 
-  // Sayfa yüklenince kategorileri ve şarkıları yükle
+  // Yeni kategori ekleme işlemi
+  addCategoryButton.addEventListener('click', () => {
+    const catName = newCategoryInput.value.trim();
+    if (!catName) {
+      alert("Kategori adı boş olamaz!");
+      return;
+    }
+    // Aynı kategori varsa ekleme
+    if (Object.values(allCategories).includes(catName)) {
+      alert("Bu kategori zaten var!");
+      return;
+    }
+    // Firebase'e kategori ekle
+    categoriesRef.push(catName).then(() => {
+      alert("Kategori eklendi!");
+      newCategoryInput.value = '';
+    }).catch(e => {
+      alert("Hata oluştu: " + e.message);
+    });
+  });
+
+  // Şarkı düzenlemesi kaydetme
+  saveButton.addEventListener('click', () => {
+    if (!currentSongId) {
+      alert("Önce bir şarkı seçin!");
+      return;
+    }
+    const editedHtml = songHtmlContainer.innerHTML.trim();
+    if (!editedHtml) {
+      alert("Şarkı içeriği boş olamaz!");
+      return;
+    }
+    songsRef.child(currentSongId).update({
+      Html: editedHtml
+    }).then(() => {
+      alert("Şarkı güncellendi!");
+    }).catch(e => {
+      alert("Güncellerken hata: " + e.message);
+    });
+  });
+
+  // Ton transpoze butonları
+  transposeUpButton.addEventListener('click', () => {
+    if (!currentSongData) {
+      alert("Önce bir şarkı seçin!");
+      return;
+    }
+    const transposed = transposeSong(songHtmlContainer.innerHTML, +1);
+    songHtmlContainer.innerHTML = transposed;
+  });
+
+  transposeDownButton.addEventListener('click', () => {
+    if (!currentSongData) {
+      alert("Önce bir şarkı seçin!");
+      return;
+    }
+    const transposed = transposeSong(songHtmlContainer.innerHTML, -1);
+    songHtmlContainer.innerHTML = transposed;
+  });
+
+  // Başlangıçta kategorileri ve şarkıları yükle
   loadCategories();
+  loadSongs();
 
 </script>
 
